--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   table {
     width: 90%;
     margin: 50px auto;
-    background-color: #76b5c5;
+    background-color: pink;
     border-style:double;
     border-width: 0.2rem;
   }
